--- a/1.Jigsaw/Index.html
+++ b/1.Jigsaw/Index.html
@@ -1,11 +1,24 @@
 <html>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="app.js"></script>
-<button onclick="cellcreator()">Clickme!</button>
+<button onclick="cellcreator()">Create Cells!</button>
+<button onclick="splitimages()">Split images</button>
+
+
+<div><img src="images/img_src (4).jpg"/> </div>
+
 <div id="scrach-area">
 
 
 
 </div>
+<div id="split-images-area">
+
+
+
+</div>
+
+
+
 
 </html>
