--- a/html5canvas/index.html
+++ b/html5canvas/index.html
@@ -4,5 +4,9 @@
 
 
 
-<canvas id="foo" class="js-paint" width="600" height="300"></canvas>
+<canvas id="foo" class="js-paint" ></canvas>
+
+
+
+
 <script src="app.js"></script>
