--- a/1.Jigsaw/Index.html
+++ b/1.Jigsaw/Index.html
@@ -5,18 +5,9 @@
 <button onclick="splitimages()">Split images</button>
 
 
-<div><img src="images/img_src (4).jpg"/> </div>
+<div id="refnode"><img src="images/img_2.jpg"/> </div> 
 
-<div id="scrach-area">
-
-
-
-</div>
-<div id="split-images-area">
-
-
-
-</div>
+<div id="split-images-area"> </div>
 
 
 
