--- a/1.Jigsaw/Index.html
+++ b/1.Jigsaw/Index.html
@@ -1,15 +1,17 @@
 <html>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script src="app.js"></script>
+
 <button onclick="cellcreator()">Create Cells!</button>
 <button onclick="splitimages()">Split images</button>
 
-
-<div id="refnode"><img src="images/img_2.jpg"/> </div> 
-
-<div id="split-images-area"> </div>
+<div id="split-images-area" class="shuffled"> </div>
+<div><img src="images/img_5.jpg" /> </div>
 
 
 
+
+
+
+<script src="app.js"></script>
 
 </html>
